Bug 34399 - SIGSEGV in intel_pixmap_is_busy(priv) [priv=NULL]
Summary: SIGSEGV in intel_pixmap_is_busy(priv) [priv=NULL]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL: http://bugs.debian.org/613830
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-17 08:09 UTC by Cyril Brulebois
Modified: 2011-02-17 08:54 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
GDB session (3.06 KB, text/plain)
2011-02-17 08:09 UTC, Cyril Brulebois
no flags Details

Description Cyril Brulebois 2011-02-17 08:09:57 UTC
Created attachment 43488 [details]
GDB session

Hi,

from Enrico Zini, in Debian's #613830 (http://bugs.debian.org/613830), opening a given pptx file with openoffice-impress leads to an X crash, with xorg-server/1.7 (running on 2.6.32); I reproduced it with latest server-1.9-branch, and latest xf86-video-intel's master (running on 2.6.37).

I'm attaching a backtrace, which shows priv's being NULL, and intel_pixmap_is_busy() which doesn't like that. :)
Comment 1 Cyril Brulebois 2011-02-17 08:17:25 UTC
Hmm, the file is too heavy for bugzilla (2MB), so I'm linking to it:
  http://store.enricozini.org/crash-x.pptx

(The link is also in the Debian bug report.)
Comment 2 Chris Wilson 2011-02-17 08:54:06 UTC
commit 4c66b28870b050493ad96f7b0fe2d70d7ee539c7
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Feb 17 16:48:24 2011 +0000

    uxa: Fallback if the temporary is too large
    
    If the render operation requires a temporary source Picture and the
    operation is large, larger than the maximum permitted bo, then we will
    fail to allocate the bo. In this case, we need to fallback and perform
    the operation on the CPU rather than dereference a NULL bo.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=34399
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.